<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Mick RobotController</string>
    <string name="app_name">RobotController</string>
    <string name="ConLabel">Configuration Robot:</string>
    <string name="IpButton">Ip Configuration</string>
    <string name="StartButton">Start Engine</string>    
    <string name="menu_item_settings">Settings</string>
    <string
        name="settings_password">Password:</string>  
    <string
        name="settings_button_dob">Pick Date</string>  
          <string
        name="settings_nickname">User:</string>
            <string
        name="settings_button_pwd">Set Password</string>
            <string
        name="settings_host">Host:</string>
            <string
        name="settings">New Node</string>
            <string name="ip_label">IP: </string>
            <string name="port_label">Port</string>
            <string name="activateSensor">Activate Sensor</string>
            <string name="SyncronizeButton">Syncronize</string>
            <string name="activateSensorCondensed">Sens</string>
            <string name="SyncronizeButtoncondensed">Sync</string>
            <string name="popoff">PopOff</string>
</resources>
