<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget30"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
android:weightSum="1">
<TextView
android:id="@+id/TextView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal" android:text="@string/hello" android:layout_weight="0.04">
</TextView>
<LinearLayout
android:id="@+id/widget45"
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
>
<TextView
android:id="@+id/TextView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
android:text="@string/ConLabel" 
android:layout_marginTop="100px">
</TextView>
<TextView
android:id="@+id/TextView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="255.255.255.255:4468"
android:layout_marginLeft="20px" android:layout_marginTop="100px">
</TextView>
</LinearLayout>
<Button
android:id="@+id/IpButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/IpButton" android:layout_marginTop="100px">
</Button>
<Button
android:id="@+id/StartButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content" android:layout_marginTop="20px"
android:background="@drawable/start_engine_button">
</Button>
</LinearLayout>
